--- a/_posts/2019-03-01-Que es BI.md
+++ b/_posts/2019-03-01-Que es BI.md
@@ -13,35 +13,35 @@ header:
 categories:
   - Introduccion
 ---
-La industria del Business Intelligence es un espacio en rápida evolución que continúa mostrando un fuerte crecimiento interanual sin signos evidentes de desaceleración. Al igual que con cualquier término tan importante como BI, hay mucha confusión sobre qué es y cómo puede aplicarse a su negocio. Para ayudarlo a comprender este término, hemos recopilado definiciones de BI de toda la web para compartir con usted.
+La industria del Business Intelligence es un espacio en rápida evolución que continúa mostrando un fuerte crecimiento interanual sin signos evidentes de desaceleración. Al igual que con cualquier término tan importante como BI, hay mucha confusión sobre qué es y cómo puede aplicarse a su negocio. Para ayudarlo a comprender este término, hemos recopilado definiciones de BI de toda la web para compartir con usted. {: .text-justify}
 
 ## Definiciones de Business Intelligence
 
 Comencemos con el principal resultado de Google.
 
-- **Wikipedia:** "Business intelligence (BI) es un conjunto de teorías, metodologías, procesos, arquitecturas y tecnologías que transforman datos sin procesar en información significativa y útil para fines comerciales. BI puede manejar grandes cantidades de información para ayudar a identificar y desarrollar nuevas oportunidades. Hacer uso de nuevas oportunidades e implementar una estrategia efectiva puede proporcionar una ventaja competitiva en el mercado y una estabilidad a largo plazo ".
+- **Wikipedia:** "Business intelligence (BI) es un conjunto de teorías, metodologías, procesos, arquitecturas y tecnologías que transforman datos sin procesar en información significativa y útil para fines comerciales. BI puede manejar grandes cantidades de información para ayudar a identificar y desarrollar nuevas oportunidades. Hacer uso de nuevas oportunidades e implementar una estrategia efectiva puede proporcionar una ventaja competitiva en el mercado y una estabilidad a largo plazo ". {: .text-justify}
 
-- **Hans Peter Luhn:** Al investigador de IBM Hans Peter Luhn se le atribuye haber acuñado el término Business Intelligence en un artículo de 1958. Él define BI como "la capacidad de comprender las interrelaciones de los hechos presentados de tal manera que guíe la acción hacia una meta deseada".
+- **Hans Peter Luhn:** Al investigador de IBM Hans Peter Luhn se le atribuye haber acuñado el término Business Intelligence en un artículo de 1958. Él define BI como "la capacidad de comprender las interrelaciones de los hechos presentados de tal manera que guíe la acción hacia una meta deseada". {: .text-justify}
 
-- **Howard Dresner:** Sobre la base de esta idea, Howard Dresner en 1989 (más tarde analista de Gartner Group) propuso "Business Intelligence" como un término general para describir "conceptos y métodos para mejorar la toma de decisiones empresariales mediante el uso de sistemas de soporte basados ​​en hechos".
+- **Howard Dresner:** Sobre la base de esta idea, Howard Dresner en 1989 (más tarde analista de Gartner Group) propuso "Business Intelligence" como un término general para describir "conceptos y métodos para mejorar la toma de decisiones empresariales mediante el uso de sistemas de soporte basados ​​en hechos". {: .text-justify}
 
-- **Forrester:** Desarrolla aún más esta idea con la siguiente definición general: "Inteligencia de negocios es un conjunto de metodologías, procesos, plataformas, aplicaciones, arquitecturas y tecnologías que transforman los datos sin procesar en información significativa y útil que se utiliza para permitir estrategias estratégicas, tácticas y operativas más efectivas. ideas y toma de decisiones ".
+- **Forrester:** Desarrolla aún más esta idea con la siguiente definición general: "Inteligencia de negocios es un conjunto de metodologías, procesos, plataformas, aplicaciones, arquitecturas y tecnologías que transforman los datos sin procesar en información significativa y útil que se utiliza para permitir estrategias estratégicas, tácticas y operativas más efectivas. ideas y toma de decisiones ". {: .text-justify}
 
-- **Wayne Eckerson:** Usó este concepto bastante simple: "BI consiste en dos actividades diametralmente opuestas: ***arriba hacia abajo***, informes basados ​​en métricas y cuadros de mando en los que sabe de antemano qué cosas desea monitorear y de ***abajo hacia arriba***, análisis ad hoc para responder. preguntas no anticipadas ".
+- **Wayne Eckerson:** Usó este concepto bastante simple: "BI consiste en dos actividades diametralmente opuestas: ***arriba hacia abajo***, informes basados ​​en métricas y cuadros de mando en los que sabe de antemano qué cosas desea monitorear y de ***abajo hacia arriba***, análisis ad hoc para responder. preguntas no anticipadas ". {: .text-justify}
 
-- **BeyeNetwork:** Publicó un artículo de Larry English en el que enfatiza que "Business Intelligence requiere información de calidad". English continúa proponiendo esta definición de BI: "La capacidad de una empresa para actuar de manera efectiva a través de la explotación de sus recursos humanos y de información".
+- **BeyeNetwork:** Publicó un artículo de Larry English en el que enfatiza que "Business Intelligence requiere información de calidad". English continúa proponiendo esta definición de BI: "La capacidad de una empresa para actuar de manera efectiva a través de la explotación de sus recursos humanos y de información". {: .text-justify}
 
 ## ¿Qué es el software de Business Intelligence BI?
 
-El software de inteligencia empresarial son las herramientas que permiten crear valor a partir de big data. Algunos ejemplos de tecnologías de inteligencia empresarial incluyen almacenes de datos, paneles de control, informes ad hoc, herramientas de descubrimiento de datos y servicios de datos en la nube.
+El software de inteligencia empresarial son las herramientas que permiten crear valor a partir de big data. Algunos ejemplos de tecnologías de inteligencia empresarial incluyen almacenes de datos, paneles de control, informes ad hoc, herramientas de descubrimiento de datos y servicios de datos en la nube. {: .text-justify}
 
-Las herramientas de inteligencia de negocios (BI) son cruciales para una medición efectiva mediante el uso de indicadores de rendimiento clave y métricas en todos los niveles de una organización, en todas las industrias. Las herramientas de inteligencia empresarial permiten a las empresas ver los datos históricos y actuales en contexto, lo que permite una mejor toma de decisiones y / o desarrollo de predicciones en función de sus objetivos comerciales.
+Las herramientas de inteligencia de negocios (BI) son cruciales para una medición efectiva mediante el uso de indicadores de rendimiento clave y métricas en todos los niveles de una organización, en todas las industrias. Las herramientas de inteligencia empresarial permiten a las empresas ver los datos históricos y actuales en contexto, lo que permite una mejor toma de decisiones y / o desarrollo de predicciones en función de sus objetivos comerciales. {: .text-justify}
 
 ![](/assets/images/post/queesbi/dashboard.svg)
 
 ## ¿Cómo se utiliza Business Intelligence ?
 
-El business Intelligence tiene un impacto tan positivo en las personas de una organización como en el desempeño, los proyectos y las decisiones. La inteligencia empresarial se utiliza para convertir los datos en información procesable para el liderazgo, la gestión, la organización y la toma de decisiones. Las siguientes son algunas de las formas en que las organizaciones están aprendiendo a usar la inteligencia empresarial:
+El business Intelligence tiene un impacto tan positivo en las personas de una organización como en el desempeño, los proyectos y las decisiones. La inteligencia empresarial se utiliza para convertir los datos en información procesable para el liderazgo, la gestión, la organización y la toma de decisiones. Las siguientes son algunas de las formas en que las organizaciones están aprendiendo a usar la inteligencia empresarial:{: .text-justify}
 
 - Análisis de comportamientos de clientes, patrones de compra y tendencias de ventas.
 - Medición, seguimiento y predicción de ventas y desempeño financiero.
@@ -69,7 +69,7 @@ El business Intelligence tiene un impacto tan positivo en las personas de una or
 
 ## ¿Cómo sé cuándo usar Business Intelligence para mi negocio?
 
-Todas las organizaciones se beneficiarán de Business Intelligence, pero aquí hay algunos indicadores claros de que debe consideraral revisar una tecnología de Business Intelligence para su negocio:
+Todas las organizaciones se beneficiarán de Business Intelligence, pero aquí hay algunos indicadores claros de que debe consideraral revisar una tecnología de Business Intelligence para su negocio:{: .text-justify}
 
 - La necesidad de integrar datos de múltiples aplicaciones empresariales o fuentes de datos.
 - Falta de visibilidad en las operaciones, eventos, noticias, finanzas y otras áreas de la compañía
@@ -81,23 +81,23 @@ Todas las organizaciones se beneficiarán de Business Intelligence, pero aquí h
 
 ***¿Por qué necesito una solución de inteligencia empresarial)***
 
-El business Intelligence está destinado a capacitar a su gente tanto como a su negocio. Las empresas han descubierto que permitir que los empleados accedan y rastreen datos analíticos y operativos mejora la eficiencia del trabajo y el logro de objetivos al monitorear los esfuerzos en tiempo real junto con el plan de negocios. El poder de BI le brinda a sus equipos la oportunidad de contar sus historias de datos, trabajar más rápido, de manera más inteligente y abrazar un espacio de trabajo más abierto y transparente. Eso es llevarlo al siguiente nivel.
+El business Intelligence está destinado a capacitar a su gente tanto como a su negocio. Las empresas han descubierto que permitir que los empleados accedan y rastreen datos analíticos y operativos mejora la eficiencia del trabajo y el logro de objetivos al monitorear los esfuerzos en tiempo real junto con el plan de negocios. El poder de BI le brinda a sus equipos la oportunidad de contar sus historias de datos, trabajar más rápido, de manera más inteligente y abrazar un espacio de trabajo más abierto y transparente. Eso es llevarlo al siguiente nivel.{: .text-justify}
 
 ## ¿Qué tipo de empresas utilizan Business Intelligence?
 
-¡Todo tipo de empresas utilizan Business Intelligence! El Business Intelligence es útil para empresas de todos los tamaños e industrias, desde grandes a pequeñas, y desde alimentos hasta software. **Es global**
+¡Todo tipo de empresas utilizan Business Intelligence! El Business Intelligence es útil para empresas de todos los tamaños e industrias, desde grandes a pequeñas, y desde alimentos hasta software. **Es global**{: .text-justify}
 
-> “En el sector minorista, Wal-Mart utiliza grandes cantidades de datos y análisis de categorías para dominar la industria. Harrah ha cambiado la base de la competencia en los juegos, desde la construcción de mega-casinos hasta el análisis en torno a la lealtad y el servicio del cliente. Amazon y Yahoo no son solo sitios de comercio electrónico; Son extremadamente analíticos y siguen un enfoque de "prueba y aprendizaje" para los cambios de negocios. Capital One realiza más de 30,000 experimentos al año para identificar clientes deseables y cotizar ofertas de tarjetas de crédito ”
+> “En el sector minorista, Wal-Mart utiliza grandes cantidades de datos y análisis de categorías para dominar la industria. Harrah ha cambiado la base de la competencia en los juegos, desde la construcción de mega-casinos hasta el análisis en torno a la lealtad y el servicio del cliente. Amazon y Yahoo no son solo sitios de comercio electrónico; Son extremadamente analíticos y siguen un enfoque de "prueba y aprendizaje" para los cambios de negocios. Capital One realiza más de 30,000 experimentos al año para identificar clientes deseables y cotizar ofertas de tarjetas de crédito ”{: .text-justify}
 
-Como lo demuestran estos ejemplos, todas las empresas pueden beneficiarse tanto interna como externamente en términos de satisfacción del cliente con inteligencia empresarial. BI permite una mejor comunicación interna a través de la colaboración y el intercambio simplificados para que los objetivos de negocio y el rendimiento se alineen correctamente.
+Como lo demuestran estos ejemplos, todas las empresas pueden beneficiarse tanto interna como externamente en términos de satisfacción del cliente con inteligencia empresarial. BI permite una mejor comunicación interna a través de la colaboración y el intercambio simplificados para que los objetivos de negocio y el rendimiento se alineen correctamente.{: .text-justify}
 
 ## ¿Cuál es la diferencia entre Business Intelligence y Business Analytics?
 
-Hay una serie de perspectivas diferentes en la discusión de la diferencia entre Business Intelligence y Business Analytics. El primer entendimiento es que BI y BA son básicamente lo mismo, argumentando que BA es el corazón de BI, excluyendo el proceso real de decisión y enfocándose en los pasos hacia la toma de decisiones.
+Hay una serie de perspectivas diferentes en la discusión de la diferencia entre Business Intelligence y Business Analytics. El primer entendimiento es que BI y BA son básicamente lo mismo, argumentando que BA es el corazón de BI, excluyendo el proceso real de decisión y enfocándose en los pasos hacia la toma de decisiones.{: .text-justify}
 
 Otros dicen que el  Business Analytics, como  el Business Intelligence , recopila y analiza datos, utilizando análisis predictivos y genera informes de visión general para ayudar a abordar las mejores áreas para la mejora de negocios, oportunidades y fortalezas.
 
-Esta perspectiva establece que la diferencia clave es que las soluciones de aBusiness Analytics utilizan el análisis predictivo para resolver problemas antes de que ocurran, mientras que BI permite a las organizaciones realizar un seguimiento en tiempo real para identificar los problemas y oportunidades actuales. Las soluciones de Business Intelligence pueden ser más óptimas para las organizaciones que están satisfechas con su modelo de negocio y que desean principalmente mejorar las operaciones, aumentar la eficiencia y cumplir los objetivos de la organización para hacer un buen cambio.
+Esta perspectiva establece que la diferencia clave es que las soluciones de aBusiness Analytics utilizan el análisis predictivo para resolver problemas antes de que ocurran, mientras que BI permite a las organizaciones realizar un seguimiento en tiempo real para identificar los problemas y oportunidades actuales. Las soluciones de Business Intelligence pueden ser más óptimas para las organizaciones que están satisfechas con su modelo de negocio y que desean principalmente mejorar las operaciones, aumentar la eficiencia y cumplir los objetivos de la organización para hacer un buen cambio.{: .text-justify}
 
 #¿Listo para comenzar?
 **Alcance un nivel completamente nuevo de toma de decisiones basada en datos con CepoBIA como su aliado**
