optimze seo Que es BI

--- a/_posts/2019-03-01-Que es BI.md
+++ b/_posts/2019-03-01-Que es BI.md
@@ -3,8 +3,8 @@ layout: single
 classes: wide
 author_profile: true
 author: Esteban Londono
-title: "¿Que es Business Intelligence?"
-excerpt: "Más de 20 formas de entender el business Intelligence para su empresa"
+title: "¿Que es Business Intelligence BI?"
+excerpt: "Más de 20 formas de entender el business Intelligence bi para su empresa"
 header:
   overlay_color: "#000"
   overlay_filter: "0.5"
@@ -15,11 +15,11 @@ categories:
 ---
 La industria del Business Intelligence es un espacio en rápida evolución que continúa mostrando un fuerte crecimiento interanual sin signos evidentes de desaceleración. Al igual que con cualquier término tan importante como BI, hay mucha confusión sobre qué es y cómo puede aplicarse a su negocio. Para ayudarlo a comprender este término, hemos recopilado definiciones de BI de toda la web para compartir con usted.
 
-## Definiciones de Business Intelligence
+# Definiciones de Business Intelligence BI
 
 Comencemos con el principal resultado de Google.
 
-- **Wikipedia:** "Business intelligence (BI) es un conjunto de teorías, metodologías, procesos, arquitecturas y tecnologías que transforman datos sin procesar en información significativa y útil para fines comerciales. BI puede manejar grandes cantidades de información para ayudar a identificar y desarrollar nuevas oportunidades. Hacer uso de nuevas oportunidades e implementar una estrategia efectiva puede proporcionar una ventaja competitiva en el mercado y una estabilidad a largo plazo ".
+- **[Wikipedia:](https://es.wikipedia.org/wiki/Inteligencia_empresarial)** "Business intelligence (BI) es un conjunto de teorías, metodologías, procesos, arquitecturas y tecnologías que transforman datos sin procesar en información significativa y útil para fines comerciales. BI puede manejar grandes cantidades de información para ayudar a identificar y desarrollar nuevas oportunidades. Hacer uso de nuevas oportunidades e implementar una estrategia efectiva puede proporcionar una ventaja competitiva en el mercado y una estabilidad a largo plazo ".
 
 - **Hans Peter Luhn:** Al investigador de IBM Hans Peter Luhn se le atribuye haber acuñado el término Business Intelligence en un artículo de 1958. Él define BI como "la capacidad de comprender las interrelaciones de los hechos presentados de tal manera que guíe la acción hacia una meta deseada".
 
@@ -100,4 +100,4 @@ Otros dicen que el  Business Analytics, como  el Business Intelligence , recopil
 Esta perspectiva establece que la diferencia clave es que las soluciones de aBusiness Analytics utilizan el análisis predictivo para resolver problemas antes de que ocurran, mientras que BI permite a las organizaciones realizar un seguimiento en tiempo real para identificar los problemas y oportunidades actuales. Las soluciones de Business Intelligence pueden ser más óptimas para las organizaciones que están satisfechas con su modelo de negocio y que desean principalmente mejorar las operaciones, aumentar la eficiencia y cumplir los objetivos de la organización para hacer un buen cambio.
 
 #¿Listo para comenzar?
-**Alcance un nivel completamente nuevo de toma de decisiones basada en datos con CepoBIA como su aliado**
+**Alcance un nivel completamente nuevo de toma de decisiones basada en datos con CepoBIA como su aliado, [Contactenos](/contacto/)**
