--- a/_posts/2019-03-15-BIvsBI.md
+++ b/_posts/2019-03-15-BIvsBI.md
@@ -2,7 +2,7 @@
 layout: single
 classes: wide
 author_profile: true
-author: Juan David Trochez
+author: Esteban Londono
 title: "La Gobernabilidad en Business Intelligence "
 excerpt: "Cuales es la Diferencia entre los enfoques de Business Intelligence Tecnico y Autoservicio "
 header:
