--- a/_posts/2019-03-15-BIvsBI.md
+++ b/_posts/2019-03-15-BIvsBI.md
@@ -4,7 +4,7 @@ classes: wide
 author_profile: true
 author: Esteban Londono
 title: "La Gobernabilidad en Business Intelligence "
-excerpt: "Cual es la Diferencia entre los enfoques de Business Intelligence Técnico y Autoservicio "
+excerpt: "Cuales son los enfoques de gobernabilidad en Business Intelligence, ¿Cual se deberia usar con Power BI? "
 header:
   overlay_color: "#000"
   overlay_filter: "0.5"
