--- a/_posts/2019-03-15-BIvsBI.md
+++ b/_posts/2019-03-15-BIvsBI.md
@@ -35,7 +35,7 @@ Aprenda a calcular el costo de la inteligencia empresarial con nuestra guía pas
 
 Pero tal vez la representación de BI Técnico vs. autoservicio como una bifurcación en el camino no es realista. Una organización puede necesitar ambos tipos de inteligencia de negocios. El informe funcional sobre las operaciones comerciales diarias sigue siendo un requisito común, incluso si ahora es una parte más pequeña de la imagen general de BI. Los informes de cumplimiento y el tablero, por ejemplo, todavía son necesarios. Además, una vez que están configuradas, estas funciones a menudo se ejecutan alegremente con poca o ninguna intervención. La BI Técnico todavía tiene un papel que desempeñar en la respuesta a preguntas sobre lo que sucedió en el pasado o sobre lo que está sucediendo con las operaciones ahora. En comparación, para preguntas sobre el futuro, especialmente las preguntas de estilo "qué pasaría si", los usuarios quieren más poder individual y tiempos de reacción más rápidos que los que el BI Técnico está diseñado para darles. En este caso, el autoservicio puede ser preferible.
 
-## Averiguar ese tenedor en el camino
+## Averiguar esa decisión en el camino
 
 Esto recuerda el consejo de un experto que dijo: "Cuando vengas a la bifurcación en el camino, ¡tómalo!" Esta afirmación aparentemente sin sentido ahora comienza a tener sentido. La forma en que "tome la bifurcación en el camino" y navegue entre BI Técnico y autoservicio dependerá de varios factores. La identificación de casos de uso de BI de autoservicio adecuados es un factor. Los niveles de usuario de negocios de la comprensión de BI es otro. También lo son la gobernabilidad de los datos y los aspectos comunes (o no) de los sistemas de BI Miramos a cada uno a su vez, a continuación.
 
